--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f pyproject.toml ]; then python -m pip install -e .; fi
-      - name: Smoke
+          python -m pip install pytest
+      - name: Tests
         run: |
-          python -c "print('ok')"
+          pytest -q
+      - name: CLI smoke
+        run: |
+          rpo validate examples/01-simple-codegen.json
+          rpo render examples/01-simple-codegen.json --target ui | head -50
