--- a/.github/workflows/copilot-autoresolve.yml
+++ b/.github/workflows/copilot-autoresolve.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   resolve-current-pr:
-    if: ${{ github.event_name == 'pull_request' }}
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
